Corrige múltiplos bugs de persistência e instanciação
Este commit resolve uma série de erros críticos identificados durante os
testes da API, garantindo a correta persistência das entidades e a
estabilidade das operações de criação.

As principais correções incluem:

- **Conflito de Construtores e Lombok:**
  Refatoração das entidades `Conta` e suas subclasses para usar
  exclusivamente as anotações do Lombok (`@NoArgsConstructor`,
  `@AllArgsConstructor`, etc.). Isso elimina construtores manuais que
  causavam erros de instanciação no Hibernate.

- **Inicialização Explícita de Valores Padrão:**
  Correção no `ClienteService` para definir `ativa=true` explicitamente no
  builder. Isso resolve o erro `NULL not allowed for column "ATIVA"`, que
  ocorria pois o `@SuperBuilder` não aplicava o inicializador de campo da entidade.

- **Flexibilização de Colunas em Herança SINGLE_TABLE:**
  Remoção da restrição `nullable = false` dos campos específicos de subclasses
  (`limite`, `taxa`, `rendimento`). A restrição era incompatível com a
  estratégia de tabela única, impedindo a inserção de diferentes tipos de conta.

- **Correção de `TransientPropertyValueException`:**
  Ajuste no método `abrirNovaConta` para garantir que a `Transacao` seja
  associada à instância da `Conta` já gerenciada pelo JPA após a
  operação de `save`. Isso evita o erro de referência a uma entidade
  ainda não persistida.